--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^6.2.0",
+    "node": "^21.1.0",
     "nodemon": "^3.0.1",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.0",
